<resources>
    <string name="app_name">Jyoti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="aocpv">AOCPV</string>
    <string name="amount">Amount</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="proceed">Proceed</string>
    <string name="not_interested">Not Interested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="personal_details">Personal details</string>
    <string name="primary_details">Primary details</string>
    <string name="title">Title</string>
    <string name="short_name">Short name</string>
    <string name="enter_short_name">Enter short name</string>
    <string name="first_name">First name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_name">Enter Name</string>
    <string name="middle_name">Middle name</string>
    <string name="enter_middle_name">Enter middle name</string>
    <string name="last_name">Last name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="dd_mmm_yyyy">DD-MMM-YYYY</string>
    <string name="gender">Gender</string>
    <string name="contact_details">Contact Details</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="address_details">Address Details</string>
    <string name="address_for_communication">Address for communication</string>
    <string name="type_of_residence">Type of residence</string>
    <string name="permanent_address">Permanent address</string>
    <string name="address_line_1">Address line 1</string>
    <string name="enter_address_line_1">Enter Address Line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="enter_address_line_2">Enter Address Line 2</string>
    <string name="address_line_3">Address line 3</string>
    <string name="enter_address_line_3">Enter Address Line 3</string>
    <string name="country">Country</string>
    <string name="pin_code">Pin code</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="city">City</string>
    <string name="enter_city">Enter city</string>
    <string name="state">State</string>
    <string name="enter_state">Enter state</string>
    <string name="district">District</string>
    <string name="enter_district">Enter district</string>
    <string name="i_am_a_resident_indian">I am a Resident Indian</string>
    <string name="residence_address_is_same_as_permanent_address">Residence Address is same as Permanent Address</string>
    <string name="proof_of_communication_address">Proof of communication address</string>
    <string name="check_message">All the above info are correct?</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="ownership_details">Ownership details</string>
    <string name="ownership_type">Ownership type</string>
    <string name="house_ownership">House Ownership</string>
    <string name="relation">Relation</string>
    <string name="other_assets">Other assets</string>
    <string name="cycle">Cycle</string>
    <string name="property">Property</string>
    <string name="tv">TV</string>
    <string name="mobile">Mobile</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="_2_wheeler">2-Wheeler</string>
    <string name="_3_wheeler">3-Wheeler</string>
    <string name="_4_wheeler">4-Wheeler</string>
    <string name="cylinder">Cylinder</string>
    <string name="pucca_rcc">Pucca/RCC</string>
    <string name="kacha_asbestos_thastched_tin">Kacha/Asbestos/Thastched/Tin</string>
    <string name="roof_type">Roof Type</string>
    <string name="customer_photo_with_house">Customer Photo (with house)</string>
    <string name="customer_photo">Customer Photo</string>
    <string name="customer_latLong">Customer Photo</string>
    <string name="customer_id">Customer Id</string>
    <string name="utility_bill_photo">Utility Bill Photo</string>
    <string name="utility_details">Utility details</string>
    <string name="utility_bills">Utility bills</string>
    <string name="primary_business_details">Primary Business Details</string>
    <string name="residence_stability">Residence Stability(In YEARS)</string>
    <string name="vintage">Vintage</string>
    <string name="vintage_in_years">In Years</string>
    <string name="business_photo">Business Photo6</string>
    <string name="relationship_with_owner">Relationship (with owner)</string>
    <string name="no_details_found">No details found</string>
    <string name="monthly_household_income">Household monthly income</string>
    <string name="yes">Yes</string>
    <string name="occupation">Occupation</string>
    <string name="family_members">Family members</string>
    <string name="enter_occupation">Enter occupation</string>
    <string name="submit">Submit</string>
    <string name="earning_member">Earning member</string>
    <string name="primary_source_of_income">Primary source of income</string>
    <string name="enter_primary_source_of_income">Enter primary source of income</string>
    <string name="secured_loan">Secured loan</string>
    <string name="enter_secured_loan">Enter secured loan</string>
    <string name="unsecured_loan">Unsecured loan</string>
    <string name="enter_unsecured_loan">Enter unsecured loan</string>
    <string name="monthly_income">Monthly income</string>
    <string name="enter_monthly_income">Enter monthly Income</string>
    <string name="monthly_loan_emi">Monthly loan EMI</string>
    <string name="enter_monthly_loan_emi">Enter monthly loan EMI</string>
    <string name="branch_details">Branch Details</string>
    <string name="last_visited">Last Visited</string>
    <string name="welcome_user">Welcome User</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="food_and_utility">Food and utility</string>
    <string name="expense_type">Expense Type</string>
    <string name="amount_c">Amount (C)</string>
    <string name="rent">Rent</string>
    <string name="total_in_rs">Total (in Rs)</string>
    <string name="household_monthly_expense">Household monthly expense</string>
    <string name="zero">0</string>
    <string name="enter_amount">Enter amount</string>
    <string name="page_no">Page %d/%d</string>
    <string name="uploaded_documents_list">UPLOADED DOCUMENTS LIST</string>
    <string name="terms_and_conditions">I agree with the terms and conditions.</string>
    <string name="i_have_seen_and_verified_the_original_documents">I have seen and verified the original documents.</string>
    <string name="edit">Edit</string>
    <string name="total_monthly_income_a">Total monthly income (A)</string>
    <string name="total_monthly_emi_non_ssfb_b">Total monthly EMI - Non SSFB (B)</string>
    <string name="miscellaneous_transportation">Miscellaneous (Transportation)</string>
    <string name="miscellaneous_medical">Miscellaneous (Medical)</string>
    <string name="miscellaneous_education">Miscellaneous (Education)</string>
    <string name="miscellaneous_others">Miscellaneous (Others)</string>
    <string name="monthly_balance">Monthly Balance</string>
    <string name="aocpv_customer_classification">AOCPV customer classification</string>
    <string name="amber">Amber</string>
    <string name="enter_mobile_no">Enter mobile no</string>
    <string name="mfi_classification">MFI classification</string>
    <string name="purpose_of_loan">Purpose of loan</string>
    <string name="existing_loan_purpose">Existing loan purpose</string>
    <string name="mobile_no_linked_to_aadhaar_no">Mobile no linked to Aadhaar no</string>
    <string name="mobile_no">Mobile no</string>
    <string name="max_emi_eligibility">Max EMI Eligibility</string>
    <string name="enter_purpose">Enter purpose</string>
    <string name="by_date">By Date</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_1_month">Last 1 month</string>
    <string name="custom_date">Custom date</string>
    <string name="by_status">By Status</string>
    <string name="initiated">Initiated</string>
    <string name="progress">Progress</string>
    <string name="completed">Completed</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="logout">Logout</string>
    <string name="add_household_monthly_income">Add household monthly income</string>
    <string name="search_here">Search here</string>
    <string name="something_is_wrong">Something is wrong</string>
    <string name="save_confirmation_dialog">Do you want to save?</string>
    <string name="confirm">Confirm</string>
    <string name="validate">Validate</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="your_otp_here">Check your phone for the OTP</string>
</resources>