<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.aocpv.OwnershipDetailsAocpvFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvOwnership"
            style="@style/Aocpv.HeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ownership_details"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/customerImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_image_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOwnership"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <TextView
            android:id="@+id/tvImageCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/customer_photo_with_house"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/customerImg" />

        <TextView
            android:id="@+id/tvOwnershipType"
            style="@style/Aocpv.SubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/ownership_type"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvImageCaption" />

        <Spinner
            android:id="@+id/ownershipSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvOwnershipType"
            app:layout_constraintTop_toBottomOf="@+id/tvOwnershipType" />

        <TextView
            android:id="@+id/tvRelation"
            style="@style/Aocpv.SubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/relation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ownershipSpinner" />

        <Spinner
            android:id="@+id/relationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvRelation"
            app:layout_constraintTop_toBottomOf="@+id/tvRelation" />

        <TextView
            android:id="@+id/tvAsset"
            style="@style/Aocpv.SubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/other_assets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relationSpinner" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:text="@string/cylinder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAsset" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/property"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/refrigerator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/washing_machine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/_2_wheeler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/_3_wheeler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox9" />

        <CheckBox
            android:id="@+id/checkBox11"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/_4_wheeler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox10" />

        <CheckBox
            android:id="@+id/checkBox12"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/cycle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox11" />

        <TextView
            android:id="@+id/tvRoofType"
            style="@style/Aocpv.SubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/roof_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox12" />

        <CheckBox
            android:id="@+id/checkBox13"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:text="@string/pucca_rcc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRoofType" />

        <CheckBox
            android:id="@+id/checkBox14"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/kacha_asbestos_thastched_tin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox13" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>